force-app/main/default/objects/Expense_Details__c/Expense_Details__c.object-meta.xml
<CustomObject>
    <label>Expense Details</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>