force-app/main/default/objects/Expense_Details__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <description>Select the category of expense</description>
    <label>Expense Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Housing / Rent</fullName>
            </value>
            <value>
                <fullName>Home Loan EMI</fullName>
            </value>
            <value>
                <fullName>Vehicle Loan EMI</fullName>
            </value>
            <value>
                <fullName>Personal Loan EMI</fullName>
            </value>
            <value>
                <fullName>Credit Card Dues</fullName>
            </value>
            <value>
                <fullName>Utilities (Electricity, Water, Gas)</fullName>
            </value>
            <value>
                <fullName>Internet &amp; Mobile</fullName>
            </value>
            <value>
                <fullName>Insurance Premiums</fullName>
            </value>
            <value>
                <fullName>Education Expenses</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Household Expenses</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>