force-app/main/default/objects/Expense_Details__c/fields/Total_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Expense__c</fullName>
    <formula>Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>